Fix checkbox alignment

--- a/src/style/_boolean.scss
+++ b/src/style/_boolean.scss
@@ -11,7 +11,12 @@
     padding: 5px 0;
   }
 
+  .checkbox-container {
+    width: 100%;
+  }
+
   input[type='checkbox'] {
     margin: 0;
+    vertical-align: middle;
   }
 }
